--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "star-wars",
     "version": "0.1.0",
     "private": true,
+    "homepage": "https://api.carlisleny.com/vue/sw",
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
