--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
     "name": "star-wars",
     "version": "0.1.0",
     "private": true,
-    "homepage": "https://api.carlisleny.com/vue/sw",
     "scripts": {
         "serve": "vue-cli-service serve",
         "build": "vue-cli-service build",
@@ -33,7 +32,9 @@
             "plugin:vue/essential",
             "eslint:recommended"
         ],
-        "rules": { "no-console": "off" },
+        "rules": {
+            "no-console": "off"
+        },
         "parserOptions": {
             "parser": "babel-eslint"
         }
