--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "axios": "^0.19.1",
         "core-js": "^3.4.4",
+        "express": "^4.17.1",
         "vue": "^2.6.10",
         "vue-router": "^3.1.5",
         "vuex": "^3.1.2"
